@startuml er_database
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam linetype ortho

entity "classes" {
  * id : INT <<PK>>
  --
  name : VARCHAR
  description : TEXT
  created_at : TIMESTAMP
}

entity "images" {
  * id : INT <<PK>>
  --
  class_id : INT <<FK>>
  file_path : VARCHAR
  created_at : TIMESTAMP
}

entity "features" {
  * id : INT <<PK>>
  --
  image_id : INT <<FK>>
  vector : FLOAT8[]
}

entity "models" {
  * id : INT <<PK>>
  --
  name : VARCHAR
  dimension : INT
  training_sample_count : INT
  default_k : INT
  created_at : TIMESTAMP
  description : TEXT
}

entity "experiments" {
  * id : INT <<PK>>
  --
  model_id : INT <<FK>>
  train_sample_count : INT
  test_sample_count : INT
  accuracy : DOUBLE
  kd_tree_build_time_ms : DOUBLE
  kd_tree_search_time_ms : DOUBLE
  linear_search_time_ms : DOUBLE
  performed_at : TIMESTAMP
  notes : TEXT
}

entity "predictions" {
  * id : INT <<PK>>
  --
  image_id : INT <<FK>>
  model_id : INT <<FK>>
  predicted_class_id : INT
  actual_class_id : INT
  distance : DOUBLE
  used_kd_tree : BOOLEAN
  k : INT
  created_at : TIMESTAMP
}

classes ||--o{ images : "1:N"
images ||--o| features : "1:1"
models ||--o{ experiments : "1:N"
models ||--o{ predictions : "1:N"
images ||--o{ predictions : "1:N"

@enduml
